--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,4 +1,9 @@
 .ts_popover_description {
     background-color: white;
-    padding: 3px
+    padding: 3px;
+    width: 400px;
+}
+
+.ts_popover_description h1 {
+    margin: 3px 0px;
 }
